--- a/.gitattributes
+++ b/.gitattributes
@@ -6,5 +6,7 @@ assets/js/vendor/*              linguist-vendored
 _sass/minimal-mistakes/vendor/* linguist-vendored
 CHANGELOG.md                    text merge=union
 docs/_docs/18-history.md        text merge=union
-
 *.md                            text
+assets/data/resume_hofer_kerstin.pdf filter=lfs diff=lfs merge=lfs -text
+\*.PNG filter=lfs diff=lfs merge=lfs -text
+assets/images/kerstin.PNG filter=lfs diff=lfs merge=lfs -text
