--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,7 @@ author:
       icon: "fab fa-fw fa-github"
       url: "https://github.com/Kerstin08"
     - label: "LinkedIn"
-      icon: "fa-brands fa-linkedin"
+      icon: "fab fa-fw fa-linkedin-square"
       url: "https://www.linkedin.com/in/kerstin-hofer-ab2b73223/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
