--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ analytics:
 # Site Author
 author:
   name             : "Kerstin Hofer"
-  avatar           : "/assets/images/kerstin.PNG"
+  avatar           : /assets/images/kerstin.PNG
   bio              : "I am an **amazing** person."
   location         :
   email            :
