Add colored header.

--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "Kerstin Hofer"
   avatar           : "/assets/images/kerstin.png"
-  bio              : "I am an **amazing** person."
+  bio              : "Avid game developer from Austria."
   location         :
   email            :
   links:
