--- a/_config.yml
+++ b/_config.yml
@@ -116,6 +116,9 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/Kerstin08"
+    - label: "Itch.io"
+      icon: "fab fa-fw fa-itch-io"
+      url: "https://github.com/Kerstin08"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/kerstin-hofer-ab2b73223/"
