Fix itch link and spelling mistakes

--- a/_config.yml
+++ b/_config.yml
@@ -118,7 +118,7 @@ author:
       url: "https://github.com/Kerstin08"
     - label: "Itch.io"
       icon: "fab fa-fw fa-itch-io"
-      url: "https://github.com/Kerstin08"
+      url: "https://khofer.itch.io/"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/kerstin-hofer-ab2b73223/"
@@ -137,7 +137,7 @@ footer:
       url: "https://github.com/Kerstin08"
     - label: "Itch.io"
       icon: "fab fa-fw fa-itch-io"
-      url: "https://github.com/Kerstin08"
+      url: "https://khofer.itch.io/"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/kerstin-hofer-ab2b73223/"
